// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Chips Chips Row 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "
      <div class=\\"d-flex\\">
        <div class=\\"me-2\\">",
    "</div>
        <div class=\\"me-2\\">",
    "</div>
        <div class=\\"me-2\\">",
    "</div>
        <div class=\\"me-2\\">",
    "</div>
      </div>
    ",
  ],
  "values": Array [
    Object {
      "_$litType$": 1,
      "strings": Array [
        "
      <div class=\\"chip\\">
         <input type=",
        " class=\\"btn-check\\" id=",
        " ?disabled=",
        " ?checked=",
        " autocomplete=\\"off\\">
         <label class=\\"btn rounded-pill\\" for=",
        ">
             <span class=",
        ">",
        "</span>
             ",
        "
            ",
        " 
         </label>
      </div>",
      ],
      "values": Array [
        "checkbox",
        "chip-alarm",
        undefined,
        undefined,
        "chip-alarm",
        "material-icons me-2 ",
        "alarm",
        "Choice Chip 1",
        Symbol(lit-nothing),
      ],
    },
    Object {
      "_$litType$": 1,
      "strings": Array [
        "
      <div class=\\"chip\\">
         <input type=",
        " class=\\"btn-check\\" id=",
        " ?disabled=",
        " ?checked=",
        " autocomplete=\\"off\\">
         <label class=\\"btn rounded-pill\\" for=",
        ">
             <span class=",
        ">",
        "</span>
             ",
        "
            ",
        " 
         </label>
      </div>",
      ],
      "values": Array [
        "checkbox",
        "chip-place",
        undefined,
        undefined,
        "chip-place",
        "material-icons me-2 ",
        "place",
        "Choice Chip 2",
        Symbol(lit-nothing),
      ],
    },
    Object {
      "_$litType$": 1,
      "strings": Array [
        "
      <div class=\\"chip\\">
         <input type=",
        " class=\\"btn-check\\" id=",
        " ?disabled=",
        " ?checked=",
        " autocomplete=\\"off\\">
         <label class=\\"btn rounded-pill\\" for=",
        ">
             <span class=",
        ">",
        "</span>
             ",
        "
            ",
        " 
         </label>
      </div>",
      ],
      "values": Array [
        "checkbox",
        "chip-search",
        undefined,
        undefined,
        "chip-search",
        "material-icons me-2 ",
        "search",
        "Choice Chip 3",
        Symbol(lit-nothing),
      ],
    },
    Object {
      "_$litType$": 1,
      "strings": Array [
        "
      <div class=\\"chip\\">
         <input type=",
        " class=\\"btn-check\\" id=",
        " ?disabled=",
        " ?checked=",
        " autocomplete=\\"off\\">
         <label class=\\"btn rounded-pill\\" for=",
        ">
             <span class=",
        ">",
        "</span>
             ",
        "
            ",
        " 
         </label>
      </div>",
      ],
      "values": Array [
        "checkbox",
        "chip-directions_bike",
        undefined,
        undefined,
        "chip-directions_bike",
        "material-icons me-2 ",
        "directions_bike",
        "Choice Chip 4",
        Symbol(lit-nothing),
      ],
    },
  ],
}
`;

exports[`Storyshots Components/Chips Filter Chips 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "
      <div class=\\"chip chip--filter\\">
         <input type=\\"checkbox\\" class=\\"btn-check\\" id='filter-chip' autocomplete=\\"off\\">
         <label class=\\"btn rounded-pill\\" for='filter-chip'>
            Filter
            <span class=\\"material-icons icon\\"></span>
         </label>
      </div>",
  ],
  "values": Array [],
}
`;

exports[`Storyshots Components/Chips Selected Chip 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "
      <div class=\\"chip\\">
         <input type=",
    " class=\\"btn-check\\" id=",
    " ?disabled=",
    " ?checked=",
    " autocomplete=\\"off\\">
         <label class=\\"btn rounded-pill\\" for=",
    ">
             <span class=",
    ">",
    "</span>
             ",
    "
            ",
    " 
         </label>
      </div>",
  ],
  "values": Array [
    "checkbox",
    "chip-done",
    false,
    true,
    "chip-done",
    "material-icons me-2 icon",
    "done",
    "Choice Chip",
    Symbol(lit-nothing),
  ],
}
`;

exports[`Storyshots Components/Chips Sort And Filter Chip 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "
      <div class=\\"chip\\">
         <input type=",
    " class=\\"btn-check\\" id=",
    " ?disabled=",
    " ?checked=",
    " autocomplete=\\"off\\">
         <label class=\\"btn rounded-pill\\" for=",
    ">
             <span class=",
    ">",
    "</span>
             ",
    "
            ",
    " 
         </label>
      </div>",
  ],
  "values": Array [
    "checkbox",
    "chip-filter_alt",
    false,
    false,
    "chip-filter_alt",
    "material-icons me-2 ",
    "filter_alt",
    "Sort & Filter",
    Symbol(lit-nothing),
  ],
}
`;

exports[`Storyshots Components/Chips Standard 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "
      <div class=\\"chip\\">
         <input type=",
    " class=\\"btn-check\\" id=",
    " ?disabled=",
    " ?checked=",
    " autocomplete=\\"off\\">
         <label class=\\"btn rounded-pill\\" for=",
    ">
             <span class=",
    ">",
    "</span>
             ",
    "
            ",
    " 
         </label>
      </div>",
  ],
  "values": Array [
    "checkbox",
    "chip-done",
    false,
    false,
    "chip-done",
    "material-icons me-2 icon",
    "done",
    "Choice Chip",
    Symbol(lit-nothing),
  ],
}
`;
